# term3d

./: CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert  unlit.frag
demo/: CMakeLists.txt  cube_demo.cpp  interactive_cube.cpp  realtime_mesh.cpp  simple_cube.cpp  transformation_chain.cpp
include/Core/: GraphicsEngine.h  Input.h  KeyCodes.h
include/Geometry/: BoundingBox.h  Mesh.h  Vertex.h
include/Math3D/: MathUtils.h  Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
include/Rendering/: IRenderer.h  NullRenderer.h  OpenGLRenderer.h  Shader.h  ShaderManager.h  Types.h
src/Core/: GraphicsEngine.cpp  Input.cpp
src/Geometry/: BoundingBox.cpp  Mesh.cpp
src/Math3D/: MathUtils.cpp  Matrix3.cpp  Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Rendering/: OpenGLRenderer.cpp
tests/: test_geometry_basic.cpp  test_math.cpp  test_matrix.cpp  test_matrix_inversion.cpp  test_mesh.cpp  test_renderer_interface.cpp
